# shemi

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.txt
bench/: bench.cpp
include/: shemi.h
src/: shemi.c
test/: hebr_to_phnx.inc.h  suite.cpp  test_data.h
